# 3DViewer

./: Makefile  README.md
3DViewer_back/ModelIO/: ModelIO.cpp  ModelIO.h
3DViewer_back/back/: affine.cpp  affine.h  parser.cpp  parser.h
3DViewer_back/mc/: controller.cpp  controller.h  model.cpp  model.h
View/: 3DViewer.pro  MainWindow.cpp  MainWindow.h  Makefile  main.cpp
View/Control/: UIControl.cpp  UIControl.h
View/Menu/: UIMenubar.cpp  UIMenubar.h  UIMyDialog.cpp  UIMyDialog.h
View/Record/: GifScreenshotDialog.cpp  GifScreenshotDialog.h  Screen.cpp  Screen.h  ScreenshotDialog.cpp  ScreenshotDialog.h
View/Scene/: UIScene.cpp  UIScene.h
View/Scene/openGL/: OpenGLWidget.cpp  OpenGLWidget.h
View/openGL/: OpenGLWidget.cpp  OpenGLWidget.h
database/: settingsManager.cpp  settingsManager.h
dvi/: README.md
matrix/: s21_matrix_oop.cpp  s21_matrix_oop.h
tests/: 3dViewer_tests.cpp  3dViewer_tests.h  CMakeLists.txt  tests  tests.h
tests/objects/: 1.stl  3.3ds  3.gltf  3.ply  3.stl  4.ply  6.3ds  6.dae  65.3ds  PIPEVALVE.dae  Pipes.ply  lamp.stl
